fixed overlap of controls div

--- a/app/stylesheets/admin.less
+++ b/app/stylesheets/admin.less
@@ -20,6 +20,28 @@ img {border: none; vertical-align: middle;}
 .strip-list{ margin: 0; list-style: none; padding: 0;}
 .pagepad {padding: 15px;}
 .clear {clear: both;}
+
+.clearfix:after {
+	content: ".";
+	display: block;
+	clear: both;
+	visibility: hidden;
+	line-height: 0;
+	height: 0;
+}
+ 
+.clearfix {
+	display: inline-block;
+}
+ 
+html[xmlns] .clearfix {
+	display: block;
+}
+ 
+* html .clearfix {
+	height: 1%;
+}
+
 .spinner {vertical-align: middle; }
 .roundit {-moz-border-radius: 10px; -webkit-border-radius: 5px; border-radius: 5px;}
 
@@ -1362,4 +1384,13 @@ span.reviewer_name {
 
 span.answer {
   word-wrap: break-word;
+}
+
+#preview {
+  width: 685px;
+}
+
+#controls {
+  position: relative;
+  float: left;
 }
